--- a/app/assets/stylesheets/application.css
+++ b/app/assets/stylesheets/application.css
@@ -14,8 +14,12 @@
  *= require_self
  */
 
- .entries_holiday td, .entries_flextime td {
+.entries_holiday td, .entries_flextime td {
   background-color: lightblue;
+}
+
+.entries_sick_leave td {
+  background-color: lightcoral;
 }
 
 .number-positive {
