--- a/app/views/dashboard/show.html.erb
+++ b/app/views/dashboard/show.html.erb
@@ -1,5 +1,27 @@
 <h1>Dashboard</h1>
 
+<!-- Summary -->
+<table border="1" cellpadding="5" cellspacing="1" width="100%">
+  <colgroup>
+    <col width="10%" />
+    <col width="10%" />
+    <col width="10%" />
+    <col width="10%" />
+    <col width="10%" />
+    <col width="10%" />
+    <col width="10%" />
+    <col width="10%" />
+    <col />
+  </colgroup>
+  <tr class="summary">
+    <td colspan="8"><%= t('.balance') %></td>
+    <td align="right"><%= color_coded_number(@entries.sum(&:time_diff)) %></td>
+  </tr>
+</table>
+
+<% @entries.group_by { |e| e.date.year }.each do |year, year_entries| %>
+  <h2><%= t('.year') %> <%= year %></h2>
+
   <!-- Summary -->
   <table border="1" cellpadding="5" cellspacing="1" width="100%">
     <colgroup>
@@ -14,13 +36,18 @@
       <col />
     </colgroup>
     <tr class="summary">
-      <td colspan="8"><%= t('.balance') %></td>
-      <td align="right"><%= color_coded_number(@entries.sum(&:time_diff)) %></td>
+      <td colspan="8"><%= t('.vacation_days') %></td>
+      <td align="right"><%= year_entries.count { |e| e.is_a? Entries::Vacation } %></td>
+    </tr>
+    <tr class="summary">
+      <td colspan="8"><%= t('.holidays') %></td>
+      <td align="right"><%= year_entries.count { |e| e.is_a? Entries::Holiday } %></td>
+    </tr>
+    <tr class="summary">
+      <td colspan="8"><%= t('.sick_days') %></td>
+      <td align="right"><%= year_entries.count { |e| e.is_a? Entries::SickLeave } %></td>
     </tr>
   </table>
-
-<% @entries.group_by { |e| e.date.year }.each do |year, year_entries| %>
-  <h2><%= t('.year') %> <%= year %></h2>
 
   <% year_entries.group_by { |e| e.date.cweek }.each do |week, week_entries| %>
     <h3><%= t('.week') %> <%= week %></h2>
