--- a/app/assets/stylesheets/application.css
+++ b/app/assets/stylesheets/application.css
@@ -14,7 +14,7 @@
  *= require_self
  */
 
-.entries_holiday td, .entries_flextime td {
+.entries_holiday td, .entries_vacation td, .entries_flextime td {
   background-color: lightblue;
 }
 
