--- a/app/views/dashboard/show.html.erb
+++ b/app/views/dashboard/show.html.erb
@@ -1,59 +1,44 @@
-<h1>Dashboard</h1>
+<h1 class="my-4">Dashboard</h1>
 
 <!-- Summary -->
-<table border="1" cellpadding="5" cellspacing="1" width="100%">
-  <colgroup>
-    <col width="10%" />
-    <col width="10%" />
-    <col width="10%" />
-    <col width="10%" />
-    <col width="10%" />
-    <col width="10%" />
-    <col width="10%" />
-    <col width="10%" />
-    <col />
-  </colgroup>
+<table class="table table-bordered">
+    <colgroup>
+      <col />
+      <col width="20%" />
+    </colgroup>
   <tr class="summary">
-    <td colspan="8"><%= t('.balance') %></td>
-    <td align="right"><%= color_coded_number(@entries.sum(&:time_diff)) %></td>
+    <td><%= t('.balance') %></td>
+    <td class="text-end"><%= color_coded_number(@entries.sum(&:time_diff)) %></td>
   </tr>
 </table>
 
 <% @entries.group_by { |e| e.date.year }.each do |year, year_entries| %>
-  <h2><%= t('.year') %> <%= year %></h2>
+  <h2 class="my-4"><%= t('.year') %> <%= year %></h2>
 
   <!-- Summary -->
-  <table border="1" cellpadding="5" cellspacing="1" width="100%">
+  <table class="table table-bordered">
     <colgroup>
-      <col width="10%" />
-      <col width="10%" />
-      <col width="10%" />
-      <col width="10%" />
-      <col width="10%" />
-      <col width="10%" />
-      <col width="10%" />
-      <col width="10%" />
       <col />
+      <col width="20%" />
     </colgroup>
     <tr class="summary">
-      <td colspan="8"><%= t('.vacation_days') %></td>
-      <td align="right"><%= year_entries.count { |e| e.is_a? Entries::Vacation } %></td>
+      <td><%= t('.vacation_days') %></td>
+      <td class="text-end"><%= year_entries.count { |e| e.is_a? Entries::Vacation } %></td>
     </tr>
     <tr class="summary">
-      <td colspan="8"><%= t('.holidays') %></td>
-      <td align="right"><%= year_entries.count { |e| e.is_a? Entries::Holiday } %></td>
+      <td><%= t('.holidays') %></td>
+      <td class="text-end"><%= year_entries.count { |e| e.is_a? Entries::Holiday } %></td>
     </tr>
     <tr class="summary">
-      <td colspan="8"><%= t('.sick_days') %></td>
-      <td align="right"><%= year_entries.count { |e| e.is_a? Entries::SickLeave } %></td>
+      <td><%= t('.sick_days') %></td>
+      <td class="text-end"><%= year_entries.count { |e| e.is_a? Entries::SickLeave } %></td>
     </tr>
   </table>
 
   <% year_entries.group_by { |e| e.date.cweek }.each do |week, week_entries| %>
-    <h3><%= t('.week') %> <%= week %></h2>
+    <h3 class="my-4"><%= t('.week') %> <%= week %></h2>
 
-    <!-- Entries -->
-    <table border="1" cellpadding="5" cellspacing="1" width="100%">
+    <table class="table table-bordered">
       <colgroup>
         <col width="10%" />
         <col width="10%" />
@@ -63,39 +48,25 @@
         <col width="10%" />
         <col width="10%" />
         <col width="10%" />
-        <col />
+        <col width="10%" />
       </colgroup>
       <tr>
-        <th><%= t('.date') %></th>
-        <th><%= t('.type') %></th>
-        <th><%= t('.start_time') %></th>
-        <th><%= t('.end_time') %></th>
-        <th><%= t('.time_working') %></th>
-        <th><%= t('.time_break') %></th>
-        <th><%= t('.time_is') %></th>
-        <th><%= t('.time_should') %></th>
-        <th><%= t('.time_diff') %></th>
+        <th class="text-end"><%= t('.date') %></th>
+        <th class="text-end"><%= t('.type') %></th>
+        <th class="text-end"><%= t('.start_time') %></th>
+        <th class="text-end"><%= t('.end_time') %></th>
+        <th class="text-end"><%= t('.time_working') %></th>
+        <th class="text-end"><%= t('.time_break') %></th>
+        <th class="text-end"><%= t('.time_is') %></th>
+        <th class="text-end"><%= t('.time_should') %></th>
+        <th class="text-end"><%= t('.time_diff') %></th>
       </tr>
+      <!-- Entries -->
       <%= render partial: 'entries/entry', collection: week_entries, as: :entry %>
-    </table>
-
-    <!-- Summary -->
-    <table border="1" cellpadding="5" cellspacing="1" width="100%">
-      <colgroup>
-        <col width="10%" />
-        <col width="10%" />
-        <col width="10%" />
-        <col width="10%" />
-        <col width="10%" />
-        <col width="10%" />
-        <col width="10%" />
-        <col width="10%" />
-        <col />
-      </colgroup>
+      <!-- Summary -->
       <tr class="summary">
-        <td colspan="2"><%= t('.sum') %></td>
-        <td colspan="6"></td>
-        <td align="right"><%= color_coded_number(week_entries.sum(&:time_diff)) %></td>
+        <td colspan="8"><strong><%= t('.sum') %></strong></td>
+        <td class="text-end"><%= color_coded_number(week_entries.sum(&:time_diff)) %></td>
       </tr>
     </table>
   <% end %>
