--- a/app/views/entries/form/_manual.html.erb
+++ b/app/views/entries/form/_manual.html.erb
@@ -2,6 +2,6 @@
   <%= f.label :time_manual, class: "col-sm-2 col-form-label" %>
 
   <div class="col-sm-10">
-    <%= f.number_field :time_manual, {class: "form-control"} %>
+    <%= f.text_field :time_manual, {class: "form-control"} %>
   </div>
 </div>
