implement user authentication with devise

--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -14,6 +14,8 @@
     <div class="container">
       <h1 class="my-4">Timesheet</h1>
 
+      <%= render "application/header" %>
+
       <div id="flash">
         <%= render "application/flash" %>
       </div>
