fix: show proper devise errors
- generated views
- disabled turbo for all forms
- changed indentation of erb templates

See: devise issue 5530

--- a/app/assets/stylesheets/application.scss
+++ b/app/assets/stylesheets/application.scss
@@ -16,6 +16,8 @@
 
  @import "bootstrap";
 
+.alert-alert { @extend .alert-info; }
+
 .entries_flextime   { @extend .table-primary; }
 .entries_holiday    { @extend .table-primary; }
 .entries_manual     { @extend .table-warning; }
