--- a/app/views/entries/destroy.turbo_stream.erb
+++ b/app/views/entries/destroy.turbo_stream.erb
@@ -1,2 +1,1 @@
-<%= turbo_stream.update "entries", partial: "entries/list" %>
-<%= turbo_stream.update "flash", partial: "application/flash" %>
+<%= render "success" %>
