--- a/app/views/entries/_entry.html.erb
+++ b/app/views/entries/_entry.html.erb
@@ -8,7 +8,7 @@
       </button>
       <ul class="dropdown-menu" aria-labelledby="<%= dom_id(entry, :dropdown) %>">
         <li>
-          <%= link_to "#", class: "dropdown-item disabled" do %>
+          <%= link_to edit_entry_path(entry), class: "dropdown-item" do %>
             <svg xmlns="http://www.w3.org/2000/svg" width="16" height="16" fill="currentColor" class="bi bi-pencil-fill" viewBox="0 0 16 16">
               <path d="M12.854.146a.5.5 0 0 0-.707 0L10.5 1.793 14.207 5.5l1.647-1.646a.5.5 0 0 0 0-.708l-3-3zm.646 6.061L9.793 2.5 3.293 9H3.5a.5.5 0 0 1 .5.5v.5h.5a.5.5 0 0 1 .5.5v.5h.5a.5.5 0 0 1 .5.5v.5h.5a.5.5 0 0 1 .5.5v.207l6.5-6.5zm-7.468 7.468A.5.5 0 0 1 6 13.5V13h-.5a.5.5 0 0 1-.5-.5V12h-.5a.5.5 0 0 1-.5-.5V11h-.5a.5.5 0 0 1-.5-.5V10h-.5a.499.499 0 0 1-.175-.032l-.179.178a.5.5 0 0 0-.11.168l-2 5a.5.5 0 0 0 .65.65l5-2a.5.5 0 0 0 .168-.11l.178-.178z"/>
             </svg>
@@ -28,7 +28,10 @@
       </ul>
     </div>
   </td>
-  <td class="text-end"><%= l(entry.date, format: :default_html).html_safe %></td>
+  <td class="text-end">
+    <%- # i18n-tasks-use t("date.formats.default_html") %>
+    <%= l(entry.date, format: :default_html).html_safe %>
+  </td>
   <td class="text-end"><%= entry.type.demodulize %></td>
   <td class="text-end"><%= value_or_dash entry.start_time&.to_fs(:time) %></td>
   <td class="text-end"><%= value_or_dash entry.end_time&.to_fs(:time) %></td>
