--- a/app/views/application/_flash.html.erb
+++ b/app/views/application/_flash.html.erb
@@ -1,3 +1,9 @@
 <% flash.each do |type, msg| %>
-  <%= content_tag :div, msg, class: "alert alert-#{type}" %>
+  <%= content_tag :div, class: "alert alert-#{type} alert-dismissible fade show" do %>
+    <div class="text-center">
+      <%= msg %>
+    </div>
+
+    <button type="button" class="btn-close" data-bs-dismiss="alert" aria-label="Close"></button>
+  <% end %>
 <% end %>
