--- a/app/views/entries/_form.html.erb
+++ b/app/views/entries/_form.html.erb
@@ -1,48 +1,42 @@
-<%= turbo_frame_tag :add_entry do %>
-  <%= render "entries/validation_errors" %>
+<%= render "entries/validation_errors" %>
 
-  <%-
-    if @entry.persisted?
-      url    = entry_path(@entry)
-      method = :patch
-    else
-      url    = entries_path
-      method = :post
+<%-
+  if @entry.persisted?
+    url    = entry_path(@entry)
+    method = :patch
+  else
+    url    = entries_path
+    method = :post
+  end
+%>
+
+<%= form_with model: @entry, scope: :entry, url: url, method: method, remote: true do |f| %>
+
+  <div class="form-group row mb-3" data-controller="entries--type">
+    <%= f.label :type, class: "col-sm-2 col-form-label" %>
+
+    <div class="col-sm-10">
+      <%= f.select :type, Entries::AVAILABLE_TYPES, {}, {class: "form-select", data: {action: "change->entries--type#change", "entries--type-target": "select"}} %>
+    </div>
+  </div>
+
+  <div class="form-group row mb-3">
+    <%= f.label :date, class: "col-sm-2 col-form-label" %>
+
+    <div class="col-sm-10">
+      <%= f.date_select :date, {}, {class: "form-select w-25 d-inline-flex"} %>
+    </div>
+  </div>
+
+  <%=
+    begin
+      render "entries/form/#{@entry.type.demodulize.underscore}", f: f
+    rescue ActionView::MissingTemplate
     end
   %>
 
-  <%= form_with model: @entry, scope: :entry, url: url, method: method, remote: true do |f| %>
+  <div class="form-group">
+    <%= f.submit t(".add"), class: "btn btn-primary" %>
+  </div>
 
-    <div class="form-group row mb-3" data-controller="entries--type">
-      <%= f.label :type, class: "col-sm-2 col-form-label" %>
-
-      <div class="col-sm-10">
-        <%= f.select :type, Entries::AVAILABLE_TYPES, {}, {class: "form-select", data: {action: "change->entries--type#change", "entries--type-target": "select"}} %>
-      </div>
-    </div>
-
-    <div class="form-group row mb-3">
-      <%= f.label :date, class: "col-sm-2 col-form-label" %>
-
-      <div class="col-sm-10">
-        <%= f.date_select :date, {}, {class: "form-select w-25 d-inline-flex"} %>
-      </div>
-    </div>
-
-    <%=
-      begin
-        render "entries/form/#{@entry.class.name.demodulize.underscore}", f: f
-      rescue ActionView::MissingTemplate => e
-        content_tag :div, class: "alert alert-info" do
-          concat content_tag :p, content_tag(:strong, 'DEBUG')
-          concat content_tag :p, e.message
-        end if Rails.env.development?
-      end
-    %>
-
-    <div class="form-group">
-      <%= f.submit t(".add"), class: "btn btn-primary" %>
-    </div>
-
-  <% end %>
 <% end %>
