--- a/app/views/entries/_form.html.erb
+++ b/app/views/entries/_form.html.erb
@@ -35,6 +35,14 @@
     end
   %>
 
+  <div class="form-group row mb-3">
+    <%= f.label :comment, class: "col-sm-2 col-form-label" %>
+
+    <div class="col-sm-10">
+      <%= f.text_area :comment, class: "form-control" %>
+    </div>
+  </div>
+
   <div class="form-group">
     <%= f.submit t(".add"), class: "btn btn-primary" %>
   </div>
