--- a/app/views/entries/_success.turbo_stream.erb
+++ b/app/views/entries/_success.turbo_stream.erb
@@ -1,2 +1,3 @@
+<%= turbo_stream.update "summary", partial: "dashboard/summary" %>
 <%= turbo_stream.update "entries", partial: "entries/list" %>
 <%= turbo_stream.update "flash", partial: "application/flash" %>
