actual update logic

--- a/app/views/dashboard/show.html.erb
+++ b/app/views/dashboard/show.html.erb
@@ -1,5 +1,11 @@
 <h2 class="my-4">Dashboard</h2>
 
+<noscript>
+  <div class="alert alert-danger text-center">
+    Please enable JavaScript.
+  </div>
+</noscript>
+
 <!-- Summary -->
 <%= turbo_frame_tag :summary do %>
   <%= render "dashboard/summary" %>
