--- a/app/views/entries/_entry.html.erb
+++ b/app/views/entries/_entry.html.erb
@@ -1,4 +1,16 @@
-<tr class="<%= dom_class(entry) %>">
+<%-
+  css_class = case entry
+  when Entries::Flextime, Entries::Holiday, Entries::Vacation
+    "table-primary"
+  when Entries::Manual
+    "table-warning"
+  when Entries::SickLeave
+    "table-danger"
+  else
+    "dummy"
+  end
+%>
+<tr class="<%= css_class %>">
   <td>
     <div class="btn-group" role="group">
       <button id="<%= dom_id(entry, :dropdown) %>" type="button" class="btn btn-sm btn-primary dropdown-toggle" data-bs-toggle="dropdown" aria-expanded="false">
