--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -1,5 +1,5 @@
 <!DOCTYPE html>
-<html>
+<html data-bs-theme="auto">
   <head>
     <title>Timesheet</title>
     <meta name="viewport" content="width=device-width,initial-scale=1">
@@ -23,5 +23,18 @@
 
       <%= yield %>
     </div>
+    <script type="text/javascript">
+      ;(function () {
+        const htmlElement = document.querySelector("html")
+        if(htmlElement.getAttribute("data-bs-theme") === "auto") {
+          function updateTheme() {
+            document.querySelector("html").setAttribute("data-bs-theme",
+            window.matchMedia("(prefers-color-scheme: dark)").matches ? "dark" : "light")
+          }
+          window.matchMedia("(prefers-color-scheme: dark)").addEventListener("change", updateTheme)
+          updateTheme()
+        }
+      })()
+    </script>
   </body>
 </html>
